kube/base/singlepage/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singlepage
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - args:
            - -file=/etc/singlepage/index.md
          name: singlepage
          image: docker.seankhliao.com/singlepage:latest
          env: []
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /etc/singlepage
              name: config
      enableServiceLinks: false
      serviceAccountName: singlepage
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: singlepage
