kube/base/singlepage/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: singlepage
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
